Setup to publish to PyPI instead of test pypi.

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,9 +3,10 @@
 
 name: Publish mangopy to PyPI
 
-on: push
-  # release:
-  #   types: [published]
+# on: push
+on:
+  release:
+    types: [published]
 
 
 jobs:
@@ -28,6 +29,6 @@ jobs:
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          # password: ${{ secrets.PYPI_API_TOKEN }}
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          # password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          # repository_url: https://test.pypi.org/legacy/
